fix font size and align welcome text

--- a/static/css/style_1.css
+++ b/static/css/style_1.css
@@ -407,5 +407,8 @@ button:focus {
 	.main .main_content .main_content_row{
 	
 	margin-top: -280px;
-	}
+  }
+ .navigation .mobile_name{
+   font-size: 28px;
+ }
 }
